<?xml version="1.0"?>
<package format="3">
  <name>dm_imu_cpp</name>
  <version>0.1.0</version>
  <description>DM IMU driver (ROS 2 Humble, C++ serial implementation)</description>

  <maintainer email="c1470759@outlook.com">Kielas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
